--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cheerio": "^0.22.31",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/memory-cache": "^0.2.2",
     "@types/nodemailer": "^6.4.7",
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
@@ -30,9 +31,12 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "http": "^0.0.1-security",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.0",
+    "memory-cache": "^0.2.0",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "npm": "^9.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -40,6 +44,7 @@
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "prisma": "^4.8.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
