--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/memory-cache": "^0.2.2",
     "@types/nodemailer": "^6.4.7",
+    "@types/sharp": "^0.31.1",
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
@@ -36,7 +37,8 @@
     "memory-cache": "^0.2.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "npm": "^9.2.0"
+    "npm": "^9.2.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
